--- a/index.html
+++ b/index.html
@@ -37,6 +37,33 @@
             -webkit-background-clip: text; -webkit-text-fill-color: transparent;
         }
 
+        /* ডিজিটাল ঘড়ি ডিজাইন */
+        .digital-clock {
+            background: #000;
+            border: 4px solid #1a1a1a;
+            padding: 20px 40px;
+            border-radius: 10px;
+            margin: 30px 0;
+            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2), inset 0 0 10px rgba(0, 242, 255, 0.1);
+            text-align: center;
+            position: relative;
+        }
+        .clock-label {
+            font-family: 'Orbitron';
+            font-size: 0.7rem;
+            color: var(--neon-blue);
+            letter-spacing: 2px;
+            margin-bottom: 5px;
+            display: block;
+        }
+        #timer {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2.5rem;
+            color: var(--neon-blue);
+            text-shadow: 0 0 15px var(--neon-blue);
+            font-weight: bold;
+        }
+
         .section-title {
             font-family: 'Orbitron', sans-serif;
             color: var(--neon-blue);
@@ -45,82 +72,79 @@
             text-transform: uppercase;
             border-left: 4px solid var(--neon-purple);
             padding-left: 10px;
-            width: 90%; max-width: 800px;
+            width: 90%; max-width: 900px;
         }
 
-        .social-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        /* রুলস বাটন ডিজাইন */
+        .rules-toggle-btn {
+            background: linear-gradient(45deg, var(--neon-red), #990033);
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 50px;
+            font-family: 'Orbitron';
+            font-weight: bold;
+            cursor: pointer;
+            margin: 20px 0;
+            box-shadow: 0 0 15px rgba(255, 0, 85, 0.3);
+            transition: 0.3s;
+            display: flex;
+            align-items: center;
             gap: 10px;
-            width: 90%; max-width: 800px;
-            margin: 10px 0;
         }
-        .social-btn {
-            display: flex; align-items: center; justify-content: center;
-            gap: 8px; padding: 12px;
-            border-radius: 8px; text-decoration: none;
-            color: white; font-weight: bold; transition: 0.3s;
-        }
-        .btn-discord { background: #5865F2; }
-        .btn-facebook { background: #1877F2; }
-        .btn-whatsapp { background: #25D366; }
-        .btn-telegram { background: #0088cc; }
-        .social-btn:hover { transform: scale(1.05); filter: brightness(1.2); }
+        .rules-toggle-btn:hover { transform: scale(1.05); filter: brightness(1.2); }
 
-        .rules-container {
-            width: 90%; max-width: 800px;
-            background: rgba(255, 0, 85, 0.05);
-            border: 1px solid var(--neon-red);
-            padding: 20px; border-radius: 15px; margin: 20px 0;
+        #rules-content {
+            display: none; /* শুরুতে লুকানো থাকবে */
+            width: 90%; max-width: 900px;
+            animation: fadeIn 0.5s ease-in;
         }
 
-        .container {
-            width: 90%; max-width: 1100px;
-            display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px; padding-bottom: 50px;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
+
+        .rules-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 20px; margin-bottom: 30px;
+        }
+        .rules-box {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(0, 242, 255, 0.2);
+            padding: 20px; border-radius: 15px;
+        }
+        .rules-box h3 { color: var(--neon-red); font-family: 'Orbitron'; font-size: 1rem; margin-top: 0; }
+        .rules-list { padding-left: 20px; color: #ced4da; font-size: 0.95rem; line-height: 1.6; list-style-type: square; }
+
+        /* সোশ্যাল ও কার্ড গ্রিড */
+        .social-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 10px; width: 90%; max-width: 900px; margin: 10px 0; }
+        .social-btn { display: flex; align-items: center; justify-content: center; gap: 8px; padding: 12px; border-radius: 8px; text-decoration: none; color: white; font-weight: bold; transition: 0.3s; }
+        .btn-discord { background: #5865F2; } .btn-facebook { background: #1877F2; } .btn-whatsapp { background: #25D366; } .btn-telegram { background: #0088cc; }
+
+        .container { width: 90%; max-width: 1100px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; padding-bottom: 50px; }
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s; }
         .card img { width: 100%; height: 180px; object-fit: cover; }
         .card-content { padding: 15px; text-align: center; }
-        .download-btn {
-            display: inline-block; width: 100%; background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
-            color: white; padding: 12px 0; text-decoration: none; border-radius: 10px; font-weight: bold;
-        }
+        .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue)); color: white; padding: 12px 0; text-decoration: none; border-radius: 10px; font-weight: bold; }
 
-        /* এসএমএস / মেসেঞ্জার ফ্লোটিং বাটন */
-        .messenger-float {
-            position: fixed;
-            bottom: 25px;
-            right: 25px;
-            background: #0084ff;
-            color: white;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 30px;
-            box-shadow: 0 4px 15px rgba(0, 132, 255, 0.5);
-            z-index: 1000;
-            text-decoration: none;
-            transition: 0.3s;
-        }
-        .messenger-float:hover { transform: scale(1.1); }
+        .messenger-float { position: fixed; bottom: 25px; right: 25px; background: #0084ff; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; box-shadow: 0 4px 15px rgba(0, 132, 255, 0.5); z-index: 1000; text-decoration: none; transition: 0.3s; }
 
-        footer { padding: 40px; color: #444; text-align: center; }
-
-        #timer { font-family: 'Orbitron'; font-size: 1.8rem; color: var(--neon-blue); text-align: center; margin: 15px 0; }
+        footer { padding: 40px; color: #444; text-align: center; font-size: 0.9rem; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>BMG BUSSID HUB</h1>
-    <p>OFFICIAL MODS & COMMUNITY</p>
+    <p>OFFICIAL MODS & COMMUNITY PORTAL</p>
 </header>
 
-<div id="timer">00:00:00</div>
+<div class="digital-clock">
+    <span class="clock-label">NEXT MULTIPLAYER ROOM</span>
+    <div id="timer">00:00:00</div>
+</div>
 
 <h2 class="section-title">✅ কমিউনিটিতে যুক্ত হন</h2>
 <div class="social-grid">
@@ -130,13 +154,38 @@
     <a href="https://t.me/khucra" target="_blank" class="social-btn btn-telegram"><i class="fab fa-telegram-plane"></i> Telegram</a>
 </div>
 
-<div class="rules-container">
-    <h2 style="color: var(--neon-red); font-family: 'Orbitron'; font-size: 1.1rem;">⚠️ গেমের নিয়মাবলী</h2>
-    <p>১. Discord-এ জয়েন করা বাধ্যতামূলক।</p>
-    <p>২. গেম ভার্সন মিল থাকতে হবে।</p>
+<button class="rules-toggle-btn" onclick="toggleRules()">
+    <i class="fas fa-scroll"></i> SERVER RULES (রুলস দেখুন)
+</button>
+
+<div id="rules-content">
+    <div class="rules-grid">
+        <div class="rules-box">
+            <h3>🇧🇩 বাংলা ভার্সন</h3>
+            <ul class="rules-list">
+                <li>গালাগালি বা অপমানজনক ভাষা ব্যবহার নিষিদ্ধ।</li>
+                <li>একই মেসেজ বারবার পাঠানো বা অযথা পিং করা যাবে না।</li>
+                <li>অনুমতি ছাড়া কোনো বিজ্ঞাপন বা লিংক শেয়ার নিষিদ্ধ।</li>
+                <li>ধর্ম বা রাজনীতি নিয়ে কোনো বিতর্ক করা যাবে না।</li>
+                <li>চিৎকার বা অন্যকে বিরক্ত করা থেকে বিরত থাকুন।</li>
+                <li>অ্যাডমিন বা মডারেটরদের সিদ্ধান্তই চূড়ান্ত।</li>
+            </ul>
+        </div>
+        <div class="rules-box">
+            <h3>🇺🇸 English Version</h3>
+            <ul class="rules-list">
+                <li>No insults, harassment, or offensive language.</li>
+                <li>Avoid repeated messages or unnecessary pings.</li>
+                <li>Sharing external links requires prior permission.</li>
+                <li>Avoid debates on religion or politics.</li>
+                <li>No screaming or disturbing others in VC.</li>
+                <li>Admin and Moderator decisions are final.</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
-<h2 class="section-title">🚌 আমাদের বাসের স্কিনসমূহ</h2>
+<h2 class="section-title">🚌 বাসের স্কিনসমূহ</h2>
 <div class="container">
     <div class="card">
         <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
@@ -163,6 +212,17 @@
 </footer>
 
 <script>
+    // রুলস শো/হাইড করার ফাংশন
+    function toggleRules() {
+        var x = document.getElementById("rules-content");
+        if (x.style.display === "block") {
+            x.style.display = "none";
+        } else {
+            x.style.display = "block";
+        }
+    }
+
+    // ডিজিটাল টাইমার ফাংশন
     function updateTimer() {
         const now = new Date();
         const times = ["14:30:00", "21:00:00"]; 
@@ -183,7 +243,7 @@
         const h = Math.floor(diff / 3600000);
         const m = Math.floor((diff % 3600000) / 60000);
         const s = Math.floor((diff % 60000) / 1000);
-        document.getElementById("timer").innerHTML = "NEXT ROOM: " + (h<10?"0"+h:h)+":"+(m<10?"0"+m:m)+":"+(s<10?"0"+s:s);
+        document.getElementById("timer").innerHTML = (h<10?"0"+h:h)+":"+(m<10?"0"+m:m)+":"+(s<10?"0"+s:s);
     }
     setInterval(updateTimer, 1000);
     updateTimer();
