--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMG BUSSID HUB | Official Portal</title>
+    <title>BMG BUSSID HUB | Pro Gaming Community</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -11,186 +11,203 @@
             --neon-blue: #00f2ff;
             --neon-purple: #7000ff;
             --neon-red: #ff0055;
-            --dark-bg: #05080f;
-            --card-bg: #0d121d;
+            --dark-bg: #030509;
+            --card-bg: rgba(13, 18, 29, 0.8);
         }
 
         body {
             background-color: var(--dark-bg);
+            background-image: 
+                radial-gradient(circle at 20% 30%, rgba(112, 0, 255, 0.15) 0%, transparent 40%),
+                radial-gradient(circle at 80% 70%, rgba(0, 242, 255, 0.15) 0%, transparent 40%);
             color: #fff;
             font-family: 'Rajdhani', sans-serif;
             margin: 0; padding: 0;
             display: flex; flex-direction: column; align-items: center;
+            overflow-x: hidden;
         }
 
+        /* প্রিমিয়াম হেডার */
         header {
-            width: 100%; padding: 40px 0;
+            width: 100%; padding: 60px 0;
             text-align: center;
-            background: linear-gradient(to bottom, rgba(0, 242, 255, 0.1), transparent);
-            border-bottom: 2px solid var(--neon-blue);
+            background: linear-gradient(to bottom, rgba(0, 242, 255, 0.05), transparent);
+            border-bottom: 1px solid rgba(0, 242, 255, 0.2);
+            backdrop-filter: blur(5px);
         }
 
         header h1 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 2.2rem; margin: 0;
-            background: linear-gradient(to right, var(--neon-blue), var(--neon-purple));
+            font-size: 3rem; margin: 0;
+            background: linear-gradient(to right, var(--neon-blue), var(--neon-purple), var(--neon-blue));
+            background-size: 200% auto;
+            animation: shine 3s linear infinite;
             -webkit-background-clip: text; -webkit-text-fill-color: transparent;
         }
 
-        /* ডিজিটাল ঘড়ি ডিজাইন */
+        @keyframes shine { to { background-position: 200% center; } }
+
+        /* ডিজিটাল ক্লক বক্স */
+        .clock-container {
+            margin: -40px 0 30px 0;
+            z-index: 10;
+        }
+
         .digital-clock {
-            background: #000;
-            border: 4px solid #1a1a1a;
-            padding: 20px 40px;
-            border-radius: 10px;
-            margin: 30px 0 10px 0;
-            box-shadow: 0 0 20px rgba(0, 242, 255, 0.2), inset 0 0 10px rgba(0, 242, 255, 0.1);
+            background: rgba(0, 0, 0, 0.8);
+            border: 2px solid var(--neon-blue);
+            padding: 25px 50px;
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(0, 242, 255, 0.3);
             text-align: center;
+            backdrop-filter: blur(10px);
         }
-        .clock-label {
-            font-family: 'Orbitron';
-            font-size: 0.7rem;
-            color: var(--neon-blue);
-            letter-spacing: 2px;
-            margin-bottom: 5px;
-            display: block;
-        }
+
         #timer {
             font-family: 'Orbitron', sans-serif;
-            font-size: 2.5rem;
+            font-size: 3rem;
             color: var(--neon-blue);
             text-shadow: 0 0 15px var(--neon-blue);
-            font-weight: bold;
-        }
-        .schedule-info {
-            color: #bdc3c7;
-            font-size: 0.9rem;
-            margin-bottom: 30px;
-            background: rgba(112, 0, 255, 0.1);
-            padding: 5px 15px;
-            border-radius: 20px;
-            border: 1px solid rgba(112, 0, 255, 0.3);
+            margin: 5px 0;
         }
 
+        .schedule-info {
+            color: #bdc3c7; font-size: 1rem; margin-top: 10px;
+            letter-spacing: 1px;
+        }
+
+        /* কার্ড সেকশন */
         .section-title {
             font-family: 'Orbitron', sans-serif;
-            color: var(--neon-blue);
-            font-size: 1.2rem;
-            margin: 30px 0 15px;
-            text-transform: uppercase;
-            border-left: 4px solid var(--neon-purple);
-            padding-left: 10px;
-            width: 90%; max-width: 900px;
+            color: var(--neon-blue); font-size: 1.5rem;
+            margin: 50px 0 25px; text-transform: uppercase;
+            text-shadow: 0 0 10px rgba(0, 242, 255, 0.5);
         }
 
-        /* রুলস বাটন ডিজাইন */
-        .rules-toggle-btn {
-            background: linear-gradient(45deg, var(--neon-red), #990033);
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 50px;
-            font-family: 'Orbitron';
-            font-weight: bold;
-            cursor: pointer;
-            margin: 20px 0;
-            box-shadow: 0 0 15px rgba(255, 0, 85, 0.3);
-            transition: 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+        .container {
+            width: 90%; max-width: 1100px;
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px; padding-bottom: 60px;
         }
-        .rules-toggle-btn:hover { transform: scale(1.05); filter: brightness(1.2); }
+
+        .card {
+            background: var(--card-bg);
+            border-radius: 20px; overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.4s ease;
+            position: relative;
+        }
+
+        .card:hover {
+            transform: translateY(-10px) scale(1.02);
+            border-color: var(--neon-blue);
+            box-shadow: 0 10px 30px rgba(0, 242, 255, 0.2);
+        }
+
+        .card img { width: 100%; height: 220px; object-fit: cover; }
+
+        .card-content { padding: 25px; text-align: center; }
+
+        .download-btn {
+            display: inline-block; width: 100%;
+            background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue));
+            color: white; padding: 15px 0; text-decoration: none;
+            border-radius: 12px; font-weight: bold; font-family: 'Orbitron';
+            transition: 0.3s;
+        }
+
+        /* ভাসমান কমিউনিটি বাটন */
+        .social-bar {
+            display: flex; gap: 15px; margin: 20px 0;
+        }
+        .social-icon {
+            width: 50px; height: 50px; background: rgba(255,255,255,0.05);
+            display: flex; align-items: center; justify-content: center;
+            border-radius: 50%; color: white; text-decoration: none;
+            border: 1px solid rgba(255,255,255,0.1); transition: 0.3s;
+        }
+        .social-icon:hover { background: var(--neon-blue); color: #000; transform: rotate(360deg); }
+
+        /* রুলস বাটন */
+        .rules-btn {
+            background: transparent; border: 2px solid var(--neon-red);
+            color: var(--neon-red); padding: 12px 40px; border-radius: 50px;
+            font-family: 'Orbitron'; font-weight: bold; cursor: pointer;
+            transition: 0.3s; margin-bottom: 20px;
+        }
+        .rules-btn:hover { background: var(--neon-red); color: white; box-shadow: 0 0 20px var(--neon-red); }
 
         #rules-content {
-            display: none;
-            width: 90%; max-width: 900px;
-            animation: fadeIn 0.5s ease-in;
+            display: none; width: 90%; max-width: 800px;
+            background: rgba(255, 0, 85, 0.05); padding: 25px;
+            border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 40px;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-10px); }
-            to { opacity: 1; transform: translateY(0); }
+        /* মেসেঞ্জার */
+        .messenger-float {
+            position: fixed; bottom: 30px; right: 30px;
+            background: #0084ff; color: white; width: 65px; height: 65px;
+            border-radius: 50%; display: flex; align-items: center; justify-content: center;
+            font-size: 32px; box-shadow: 0 5px 20px rgba(0, 132, 255, 0.4);
+            z-index: 1000; text-decoration: none;
         }
 
-        .rules-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 20px; margin-bottom: 30px;
-        }
-        .rules-box {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(0, 242, 255, 0.2);
-            padding: 20px; border-radius: 15px;
-        }
-        .rules-box h3 { color: var(--neon-red); font-family: 'Orbitron'; font-size: 1rem; margin-top: 0; }
-        .rules-list { padding-left: 20px; color: #ced4da; font-size: 0.95rem; line-height: 1.6; }
-
-        /* কার্ড গ্রিড */
-        .container { width: 90%; max-width: 1100px; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; padding-bottom: 50px; }
-        .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s; }
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-content { padding: 15px; text-align: center; }
-        .download-btn { display: inline-block; width: 100%; background: linear-gradient(45deg, var(--neon-purple), var(--neon-blue)); color: white; padding: 12px 0; text-decoration: none; border-radius: 10px; font-weight: bold; }
-
-        .messenger-float { position: fixed; bottom: 25px; right: 25px; background: #0084ff; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; box-shadow: 0 4px 15px rgba(0, 132, 255, 0.5); z-index: 1000; text-decoration: none; transition: 0.3s; }
-
-        footer { padding: 40px; color: #444; text-align: center; font-size: 0.9rem; }
+        footer { padding: 60px; color: #555; text-align: center; border-top: 1px solid rgba(255,255,255,0.05); width: 100%; }
     </style>
 </head>
 <body>
 
 <header>
     <h1>BMG BUSSID HUB</h1>
-    <p>OFFICIAL MODS & COMMUNITY PORTAL</p>
+    <p style="color: var(--neon-blue); letter-spacing: 5px;">BORN TO DRIVE • LIVE TO GAME</p>
 </header>
 
-<div class="digital-clock">
-    <span class="clock-label">NEXT MULTIPLAYER ROOM IN</span>
-    <div id="timer">00:00:00</div>
-</div>
-<div class="schedule-info">
-    <i class="fas fa-clock"></i> দুপুর ০২:৩০ PM | রাত ০৯:০০ PM
-</div>
-
-<h2 class="section-title">✅ কমিউনিটিতে যুক্ত হন</h2>
-<div style="display: flex; gap: 10px; flex-wrap: wrap; justify-content: center; width: 90%;">
-    <a href="https://discord.gg/fUKA2MpFmn" target="_blank" style="background:#5865F2; padding:12px 20px; border-radius:8px; text-decoration:none; color:white; font-weight:bold;">Discord</a>
-    <a href="https://www.facebook.com/groups/4203315063290851/" target="_blank" style="background:#1877F2; padding:12px 20px; border-radius:8px; text-decoration:none; color:white; font-weight:bold;">FB Group</a>
-    <a href="https://chat.whatsapp.com/KimQEIVWEYNI7AEiqMT4hs" target="_blank" style="background:#25D366; padding:12px 20px; border-radius:8px; text-decoration:none; color:white; font-weight:bold;">WhatsApp</a>
-</div>
-
-<button class="rules-toggle-btn" onclick="toggleRules()">
-    <i class="fas fa-gavel"></i> ROOM RULES (গেমের নিয়মাবলী)
-</button>
-
-<div id="rules-content">
-    <div class="rules-box" style="margin-bottom:20px;">
-        <h3>🏁 মাল্টিপ্লেয়ার রুম রুলস</h3>
-        <ul class="rules-list">
-            <li><strong>লাইন মেনটেইন:</strong> সবাই এক লাইনে গাড়ি চালাবেন, অযথা ওভারটেক করবেন না।</li>
-            <li><strong>স্পিড লিমিট:</strong> গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
-            <li><strong>নিরাপদ দূরত্ব:</strong> সামনের গাড়ি থেকে পর্যাপ্ত দূরত্ব বজায় রাখুন।</li>
-            <li><strong>ইন্ডিকেটর:</strong> মোড় ঘোরার সময় ইন্ডিকেটর ব্যবহার বাধ্যতামূলক।</li>
-            <li><strong>ভদ্রতা:</strong> গেম চ্যাটে কোনো খারাপ ভাষা বা বিশৃঙ্খলা করা যাবে না।</li>
-        </ul>
+<div class="clock-container">
+    <div class="digital-clock">
+        <span style="font-size: 0.8rem; color: #666; font-family: 'Orbitron';">NEXT MATCH STARTS IN</span>
+        <div id="timer">00:00:00</div>
+        <div class="schedule-info">
+            <i class="fas fa-gamepad"></i> দুপুর ০২:৩০ | রাত ০৯:০০
+        </div>
     </div>
 </div>
 
-<h2 class="section-title">🚌 বাসের স্কিনসমূহ</h2>
+<div class="social-bar">
+    <a href="https://discord.gg/fUKA2MpFmn" class="social-icon" title="Discord"><i class="fab fa-discord"></i></a>
+    <a href="https://www.facebook.com/groups/4203315063290851/" class="social-icon" title="FB Group"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://chat.whatsapp.com/KimQEIVWEYNI7AEiqMT4hs" class="social-icon" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://t.me/khucra" class="social-icon" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
+</div>
+
+<button class="rules-btn" onclick="toggleRules()">VIEW ROOM RULES</button>
+
+<div id="rules-content">
+    <h3 style="font-family: 'Orbitron'; margin-top: 0;">🛑 মাল্টিপ্লেয়ার রুমের নিয়মাবলী</h3>
+    <ul style="line-height: 1.8; color: #bdc3c7;">
+        <li>১. এক লাইনে গাড়ি চালান, ওভারটেক করা নিষেধ।</li>
+        <li>২. গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
+        <li>৩. হর্ন বাজানো থেকে বিরত থাকুন (জরুরি প্রয়োজন ছাড়া)।</li>
+        <li>৪. ইন্ডিকেটর এবং হেডলাইট সঠিকভাবে ব্যবহার করুন।</li>
+        <li>৫. অ্যাডমিনের নির্দেশ মেনে চলুন।</li>
+    </ul>
+</div>
+
+<h2 class="section-title">PREMIUM BUS SKINS</h2>
+
 <div class="container">
     <div class="card">
         <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
         <div class="card-content">
-            <h3>HANIF PREMIUM SKIN</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD</a>
+            <h3 style="margin: 0 0 15px 0;">HANIF PREMIUM V2</h3>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
+
     <div class="card">
         <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
         <div class="card-content">
-            <h3>MULTIPLAYER EDITION</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD</a>
+            <h3 style="margin: 0 0 15px 0;">ELITE MULTIPLAYER</h3>
+            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn">DOWNLOAD NOW</a>
         </div>
     </div>
 </div>
@@ -200,7 +217,8 @@
 </a>
 
 <footer>
-    &copy; 2026 BMG-BUSSID | JCT NISHAT
+    &copy; 2026 BMG-BUSSID HUB | DESIGNED BY JCT NISHAT<br>
+    <small>THE ULTIMATE DESTINATION FOR BUSSID LOVERS</small>
 </footer>
 
 <script>
