--- a/index.html
+++ b/index.html
@@ -12,49 +12,69 @@
             --neon-purple: #7000ff;
             --neon-red: #ff0055;
             --dark-bg: #030509;
-            --card-bg: rgba(13, 18, 29, 0.8);
+            --card-bg: rgba(13, 18, 29, 0.9);
         }
 
         body {
             background-color: var(--dark-bg);
-            background-image: 
-                radial-gradient(circle at 20% 30%, rgba(112, 0, 255, 0.15) 0%, transparent 40%),
-                radial-gradient(circle at 80% 70%, rgba(0, 242, 255, 0.15) 0%, transparent 40%);
             color: #fff;
             font-family: 'Rajdhani', sans-serif;
             margin: 0; padding: 0;
             display: flex; flex-direction: column; align-items: center;
             overflow-x: hidden;
+            background-image: 
+                radial-gradient(circle at 20% 30%, rgba(112, 0, 255, 0.15) 0%, transparent 40%),
+                radial-gradient(circle at 80% 70%, rgba(0, 242, 255, 0.15) 0%, transparent 40%);
         }
 
-        /* প্রিমিয়াম হেডার */
+        /* প্রিমিয়াম হেডার - সেন্টারড */
         header {
             width: 100%; padding: 60px 0;
             text-align: center;
             background: linear-gradient(to bottom, rgba(0, 242, 255, 0.05), transparent);
             border-bottom: 1px solid rgba(0, 242, 255, 0.2);
             backdrop-filter: blur(5px);
+            z-index: 100;
         }
 
-        header h1 {
+        /* আনকমন লোগো স্টাইল - EBL */
+        .logo-box {
+            display: inline-block;
+            padding: 10px 20px;
+            border: 2px solid var(--neon-blue);
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 5px;
+            margin-bottom: 15px;
+            box-shadow: 0 0 15px rgba(0, 242, 255, 0.4);
+            position: relative;
+        }
+        .logo-box::after {
+            content: ''; position: absolute; top: -5px; right: -5px; bottom: -5px; left: -5px;
+            border: 1px solid var(--neon-purple); border-radius: 8px;
+            animation: pulse 2s infinite;
+        }
+        .ebl-logo {
             font-family: 'Orbitron', sans-serif;
-            font-size: 3rem; margin: 0;
-            background: linear-gradient(to right, var(--neon-blue), var(--neon-purple), var(--neon-blue));
-            background-size: 200% auto;
-            animation: shine 3s linear infinite;
+            font-size: 3rem;
+            background: linear-gradient(to right, #fff, var(--neon-blue), #fff);
             -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
         }
 
-        @keyframes shine { to { background-position: 200% center; } }
+        @keyframes pulse {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.05); opacity: 0.5; }
+            100% { transform: scale(1); opacity: 1; }
+        }
 
-        /* ডিজিটাল ক্লক বক্স */
+        /* ডিজিটাল ক্লক - সেন্টারড */
         .clock-container {
             margin: -40px 0 30px 0;
             z-index: 10;
         }
 
         .digital-clock {
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.85);
             border: 2px solid var(--neon-blue);
             padding: 25px 50px;
             border-radius: 15px;
@@ -76,18 +96,14 @@
             letter-spacing: 1px;
         }
 
-        /* কার্ড সেকশন */
-        .section-title {
-            font-family: 'Orbitron', sans-serif;
-            color: var(--neon-blue); font-size: 1.5rem;
-            margin: 50px 0 25px; text-transform: uppercase;
-            text-shadow: 0 0 10px rgba(0, 242, 255, 0.5);
-        }
-
+        /* কার্ড সেকশন - সেন্টারড গ্রিড */
         .container {
             width: 90%; max-width: 1100px;
-            display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px; padding-bottom: 60px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 30px;
+            padding-bottom: 60px;
+            justify-items: center; /* কার্ডগুলো মাঝখানে থাকবে */
         }
 
         .card {
@@ -95,7 +111,7 @@
             border-radius: 20px; overflow: hidden;
             border: 1px solid rgba(255, 255, 255, 0.1);
             transition: all 0.4s ease;
-            position: relative;
+            max-width: 380px; /* কার্ড খুব বেশি বড় হবে না */
         }
 
         .card:hover {
@@ -104,7 +120,13 @@
             box-shadow: 0 10px 30px rgba(0, 242, 255, 0.2);
         }
 
-        .card img { width: 100%; height: 220px; object-fit: cover; }
+        /* ছবি ঝাপসা রোধ করার জন্য ফিক্স */
+        .card img {
+            width: 100%; height: 210px;
+            object-fit: cover;
+            image-rendering: -webkit-optimize-contrast; /* শার্পনেস বাড়াবে */
+            display: block;
+        }
 
         .card-content { padding: 25px; text-align: center; }
 
@@ -116,9 +138,10 @@
             transition: 0.3s;
         }
 
-        /* ভাসমান কমিউনিটি বাটন */
+        /* সোশ্যাল বাটন - সেন্টারড */
         .social-bar {
             display: flex; gap: 15px; margin: 20px 0;
+            justify-content: center;
         }
         .social-icon {
             width: 50px; height: 50px; background: rgba(255,255,255,0.05);
@@ -143,7 +166,7 @@
             border-radius: 15px; border: 1px solid var(--neon-red); margin-bottom: 40px;
         }
 
-        /* মেসেঞ্জার */
+        /* মেসেঞ্জার বাটন */
         .messenger-float {
             position: fixed; bottom: 30px; right: 30px;
             background: #0084ff; color: white; width: 65px; height: 65px;
@@ -158,8 +181,10 @@
 <body>
 
 <header>
-    <h1>BMG BUSSID HUB</h1>
-    <p style="color: var(--neon-blue); letter-spacing: 5px;">BORN TO DRIVE • LIVE TO GAME</p>
+    <div class="logo-box">
+        <span class="ebl-logo">EBL</span>
+    </div>
+    <p style="color: var(--neon-blue); letter-spacing: 5px; margin: 0;">BORN TO DRIVE • LIVE TO GAME</p>
 </header>
 
 <div class="clock-container">
@@ -187,12 +212,12 @@
         <li>১. এক লাইনে গাড়ি চালান, ওভারটেক করা নিষেধ।</li>
         <li>২. গতি অবশ্যই ৮০-১০০ কিমি/ঘণ্টার মধ্যে রাখুন।</li>
         <li>৩. হর্ন বাজানো থেকে বিরত থাকুন (জরুরি প্রয়োজন ছাড়া)।</li>
-        <li>৪. ইন্ডিকেটর এবং হেডলাইট সঠিকভাবে ব্যবহার করুন।</li>
+        <li>৪. ইন্ডিকেটর হেডলাইট সঠিকভাবে ব্যবহার করুন।</li>
         <li>৫. অ্যাডমিনের নির্দেশ মেনে চলুন।</li>
     </ul>
 </div>
 
-<h2 class="section-title">PREMIUM BUS SKINS</h2>
+<h2 style="font-family: 'Orbitron'; color: var(--neon-blue); font-size: 1.5rem; margin: 50px 0 25px;">PREMIUM BUS SKINS</h2>
 
 <div class="container">
     <div class="card">
