--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             --neon-purple: #7000ff;
             --neon-red: #ff0055;
             --dark-bg: #020408;
+            --card-bg: rgba(13, 18, 29, 0.95);
         }
 
         body {
@@ -41,7 +42,6 @@
             color: #fff;
             text-transform: uppercase;
             letter-spacing: 8px;
-            /* নিয়ন লাইটিং ইফেক্ট */
             animation: neon-glow 3s ease-in-out infinite alternate;
         }
 
@@ -57,7 +57,7 @@
         .sub-logo {
             font-family: 'Orbitron';
             font-size: 1.2rem;
-            color: #ccc; /* হালকা সাদা/ধূসর */
+            color: #ccc;
             letter-spacing: 3px;
             margin-top: 10px;
             font-weight: bold;
@@ -89,7 +89,7 @@
             margin: 10px 0;
         }
 
-        /* স্ট্যাটাস সেকশন (যাতে খালি না লাগে) */
+        /* স্ট্যাটাস সেকশন */
         .stats-bar {
             display: flex; gap: 20px; margin: 30px 0;
             width: 90%; max-width: 800px; justify-content: center;
@@ -122,20 +122,28 @@
         .btn-telegram { background: #0088cc; }
         .social-btn:hover { transform: translateY(-5px) scale(1.05); filter: brightness(1.2); }
 
-        /* কার্ডস */
+        /* কার্ডস - ছবি ঝাপসা রোধ করার জন্য ফিক্স */
         .container {
             width: 95%; max-width: 1200px;
             display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 30px; padding: 40px 0 80px;
         }
         .card {
-            background: linear-gradient(145deg, #0d121d, #05080f);
+            background: var(--card-bg);
             border-radius: 20px; overflow: hidden;
             border: 1px solid rgba(255, 255, 255, 0.05);
             transition: 0.4s;
         }
         .card:hover { border-color: var(--neon-blue); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); }
-        .card img { width: 100%; height: 220px; object-fit: cover; }
+        
+        .card img { 
+            width: 100%; height: 220px; object-fit: cover; 
+            /* 4K ছবির কোয়ালিটি ধরে রাখার জন্য */
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
+            display: block;
+        }
+        
         .card-content { padding: 25px; text-align: center; }
         .download-btn {
             display: inline-block; width: 100%;
@@ -189,7 +197,7 @@
     </div>
     <div class="stat-item">
         <i class="fas fa-download"></i>
-        <span>1.2K</span>
+        <span>1.5K</span>
         <label>Downloads</label>
     </div>
     <div class="stat-item">
@@ -222,10 +230,10 @@
 
 <div class="container">
     <div class="card">
-        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Hanif">
+        <img src="https://i.postimg.cc/TphkDsjr/Photo-260226103343.jpg" alt="Saudia Bus Skin">
         <div class="card-content">
-            <h3 style="font-family: 'Orbitron'; margin-bottom: 15px;">HANIF PREMIUM V2</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD MOD</a>
+            <h3 style="font-family: 'Orbitron'; margin-bottom: 15px;">SAUDIA BUS SKIN (4K)</h3>
+            <a href="https://drive.google.com/file/d/1TckotrGd1sy2boe1FVwqsiSRpR89iHgv/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD MOD</a>
         </div>
     </div>
 
