--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@
             border: 1px solid rgba(255, 255, 255, 0.05); transition: 0.4s;
             box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
-        
         .card:hover { border-color: var(--neon-blue); transform: translateY(-10px); }
 
         .image-box { width: 100%; height: 210px; overflow: hidden; background: #000; }
-
         .card img { 
             width: 100%; height: 100%; object-fit: cover;
             filter: contrast(1.1) brightness(1.1);
@@ -73,7 +71,7 @@
         }
 
         .card-content { padding: 25px; text-align: center; }
-        .card-content h3 { font-family: 'Orbitron'; font-size: 1.1rem; color: #fff; margin-bottom: 20px; }
+        .card-content h3 { font-family: 'Orbitron'; font-size: 1.1rem; color: #fff; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 1px; }
 
         .download-btn { 
             display: inline-block; width: 100%; 
@@ -81,9 +79,6 @@
             color: white; padding: 15px 0; text-decoration: none; 
             border-radius: 10px; font-weight: bold; font-family: 'Orbitron';
         }
-
-        .rules-btn { background: transparent; border: 2px solid var(--neon-red); color: var(--neon-red); padding: 12px 35px; border-radius: 50px; font-family: 'Orbitron'; font-weight: bold; cursor: pointer; transition: 0.3s; margin: 20px 0; }
-        .rules-btn:hover { background: var(--neon-red); color: white; }
 
         .messenger-float { position: fixed; bottom: 30px; right: 30px; background: #0084ff; color: white; width: 65px; height: 65px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 32px; z-index: 1000; }
 
@@ -132,11 +127,11 @@
 
     <div class="card">
         <div class="image-box">
-            <img src="https://i.postimg.cc/ykrbpKYC/Chat-GPT-Image-Feb-27-2026-11-00-02-PM.png" alt="Multiplayer">
+            <img src="https://i.postimg.cc/bw39KnKw/20260228-023826.jpg" alt="Hanif Bus">
         </div>
         <div class="card-content">
-            <h3>ELITE MULTIPLAYER MOD</h3>
-            <a href="https://drive.google.com/drive/folders/18x2iVMy3aiwLzrV_pQsQP8GHnCCMETx3" class="download-btn" target="_blank">DOWNLOAD NOW</a>
+            <h3>HANIF BUS SKIN</h3>
+            <a href="https://drive.google.com/file/d/1-HalrVa1FkDsAT3_35_TEe_H59f1Mtd3/view?usp=drivesdk" class="download-btn" target="_blank">DOWNLOAD NOW</a>
         </div>
     </div>
 </div>
